completes pipeline for basic stacking

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,26 +827,36 @@
     "\n",
     "        for name in self.get_unique_available_data_set_names():\n",
     "            baseline_metrics = self.get_metrics_for_baseline_model(name)\n",
+    "            stacking_metrics = self.get_metrics_for_basic_stacking(name)\n",
     "\n",
     "            results.append({\n",
-    "                \"name\": name,\n",
+    "                \"dataset_name\": name,\n",
     "                \"baseline_accuracy\": baseline_metrics[0],\n",
-    "                \"baseline_hamming_loss\": baseline_metrics[1]\n",
+    "                \"baseline_hamming_loss\": baseline_metrics[1],\n",
+    "                \"stacking_accuracy\": stacking_metrics[0],\n",
+    "                \"stacking_hamming_loss\": stacking_metrics[1]\n",
     "            })\n",
     "\n",
     "            self.save_results(results)\n",
+    "            print(f\"finished baseline for {name}\")\n",
     "\n",
     "    def get_metrics_for_baseline_model(self, data_set_name: str) -> Tuple[float, float]:\n",
-    "        X_train, y_train, X_test, y_test = self.get_data_set(data_set_name)\n",
-    "\n",
-    "        baseline_clf = BinaryRelevance(\n",
+    "        clf = BinaryRelevance(\n",
     "            classifier=SVC(),\n",
     "            require_dense=[False, True]\n",
     "        )\n",
+    "        return self.get_metrics_for_model(clf, data_set_name)\n",
     "\n",
-    "        baseline_clf.fit(X_train, y_train)\n",
+    "    def get_metrics_for_basic_stacking(self, data_set_name: str) -> Tuple[float, float]:\n",
+    "        clf = BasicStacking()\n",
+    "        return self.get_metrics_for_model(clf, data_set_name)\n",
     "\n",
-    "        prediction = baseline_clf.predict(X_test)\n",
+    "    def get_metrics_for_model(self, clf: Any, data_set_name: str) -> Tuple[float, float]:\n",
+    "        X_train, y_train, X_test, y_test = self.get_data_set(data_set_name)\n",
+    "\n",
+    "        clf.fit(X_train, y_train)\n",
+    "\n",
+    "        prediction = clf.predict(X_test)\n",
     "        accuracy_score = metrics.accuracy_score(y_test, prediction)\n",
     "        hamming_loss = metrics.hamming_loss(y_test, prediction)\n",
     "\n",
@@ -863,7 +873,9 @@
     "        if _available_data_sets is None:\n",
     "            raise Exception(\"could not load available data sets\")\n",
     "\n",
-    "        skip = [\"bibtex\"]\n",
+    "        skip = [\"bibtex\", \"Corel5k\"]\n",
+    "        # bibtex -> takes too long to train and test\n",
+    "        # Corel5k -> apparently it has only a single class, which is not accepted by the classifier\n",
     "\n",
     "        for dataset_name, variant in _available_data_sets:\n",
     "            if dataset_name in skip:\n",
@@ -893,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -902,10 +914,10 @@
      "text": [
       "birds:train - exists, not redownloading\n",
       "birds:test - exists, not redownloading\n",
-      "Corel5k:train - does not exists downloading\n",
-      "Downloaded Corel5k-train\n",
-      "Corel5k:test - does not exists downloading\n",
-      "Downloaded Corel5k-test\n"
+      "delicious:train - does not exists downloading\n",
+      "Downloaded delicious-train\n",
+      "delicious:test - does not exists downloading\n",
+      "Downloaded delicious-test\n"
      ]
     }
    ],
