--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,18 +631,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.08416945373467112"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'y_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-c7d288e37b37>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mregular_br_hamming_loss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhamming_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprediction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mregular_br_hamming_loss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_test' is not defined"
+     ]
     }
    ],
    "source": [
@@ -673,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,17 +818,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "SplitDataset = Tuple[np.ndarray, np.ndarray, np.ndarray, np.ndarray]\n",
+    "\n",
     "class BasicStackingAgainstBinaryRelevanceBaselineTest:\n",
     "    def run(self):\n",
     "        results = []\n",
     "\n",
     "        for name in self.get_unique_available_data_set_names():\n",
-    "            baseline_metrics = self.get_metrics_for_baseline_model(name)\n",
-    "            stacking_metrics = self.get_metrics_for_basic_stacking(name)\n",
+    "            data_sets = self.get_data_set(name)\n",
+    "\n",
+    "            baseline_metrics = self.get_metrics_for_baseline_model(data_sets)\n",
+    "            stacking_metrics = self.get_metrics_for_basic_stacking(data_sets)\n",
     "\n",
     "            results.append({\n",
     "                \"dataset_name\": name,\n",
@@ -840,19 +845,19 @@
     "            self.save_results(results)\n",
     "            print(f\"finished baseline for {name}\")\n",
     "\n",
-    "    def get_metrics_for_baseline_model(self, data_set_name: str) -> Tuple[float, float]:\n",
+    "    def get_metrics_for_baseline_model(self, split_dataset: SplitDataset) -> Tuple[float, float]:\n",
     "        clf = BinaryRelevance(\n",
     "            classifier=SVC(),\n",
     "            require_dense=[False, True]\n",
     "        )\n",
-    "        return self.get_metrics_for_model(clf, data_set_name)\n",
+    "        return self.get_metrics_for_model(clf, split_dataset)\n",
     "\n",
-    "    def get_metrics_for_basic_stacking(self, data_set_name: str) -> Tuple[float, float]:\n",
+    "    def get_metrics_for_basic_stacking(self, split_dataset: SplitDataset) -> Tuple[float, float]:\n",
     "        clf = BasicStacking()\n",
-    "        return self.get_metrics_for_model(clf, data_set_name)\n",
+    "        return self.get_metrics_for_model(clf, split_dataset)\n",
     "\n",
-    "    def get_metrics_for_model(self, clf: Any, data_set_name: str) -> Tuple[float, float]:\n",
-    "        X_train, y_train, X_test, y_test = self.get_data_set(data_set_name)\n",
+    "    def get_metrics_for_model(self, clf: Any, split_dataset: SplitDataset) -> Tuple[float, float]:\n",
+    "        X_train, y_train, X_test, y_test = split_dataset\n",
     "\n",
     "        clf.fit(X_train, y_train)\n",
     "\n",
@@ -864,7 +869,7 @@
     "\n",
     "    def save_results(self, results: List[Dict[str, Any]]):\n",
     "        with open(\"results.json\", \"w\") as f:\n",
-    "            json.dump(results, f)\n",
+    "            json.dump(results, f, indent=4)\n",
     "\n",
     "    def get_unique_available_data_set_names(self) -> List[str]:\n",
     "        dataset_names = []\n",
@@ -873,9 +878,13 @@
     "        if _available_data_sets is None:\n",
     "            raise Exception(\"could not load available data sets\")\n",
     "\n",
-    "        skip = [\"bibtex\", \"Corel5k\"]\n",
+    "        skip = [\"bibtex\", \"Corel5k\", \"delicious\", \"enron\", \"genbase\", \"mediamill\"]\n",
     "        # bibtex -> takes too long to train and test\n",
     "        # Corel5k -> apparently it has only a single class, which is not accepted by the classifier\n",
+    "        # delicious -> takes too long to train and test\n",
+    "        # enron -> apparently it has only a single class, which is not accepted by the classifier\n",
+    "        # genbase -> apparently it has only a single class, which is not accepted by the classifier\n",
+    "        # mediamill -> takes too long to train and test\n",
     "\n",
     "        for dataset_name, variant in _available_data_sets:\n",
     "            if dataset_name in skip:\n",
@@ -905,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -914,10 +923,12 @@
      "text": [
       "birds:train - exists, not redownloading\n",
       "birds:test - exists, not redownloading\n",
-      "delicious:train - does not exists downloading\n",
-      "Downloaded delicious-train\n",
-      "delicious:test - does not exists downloading\n",
-      "Downloaded delicious-test\n"
+      "finished baseline for birds\n",
+      "emotions:train - exists, not redownloading\n",
+      "emotions:test - exists, not redownloading\n",
+      "finished baseline for emotions\n",
+      "mediamill:train - exists, not redownloading\n",
+      "mediamill:test - exists, not redownloading\n"
      ]
     }
    ],
