skips one more data set

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "              'yeast-train.scikitml.bz2']})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,13 +878,14 @@
     "        if _available_data_sets is None:\n",
     "            raise Exception(\"could not load available data sets\")\n",
     "\n",
-    "        skip = [\"bibtex\", \"Corel5k\", \"delicious\", \"enron\", \"genbase\", \"mediamill\"]\n",
+    "        skip = [\"bibtex\", \"Corel5k\", \"delicious\", \"enron\", \"genbase\", \"mediamill\", \"medical\"]\n",
     "        # bibtex -> takes too long to train and test\n",
     "        # Corel5k -> apparently it has only a single class, which is not accepted by the classifier\n",
     "        # delicious -> takes too long to train and test\n",
     "        # enron -> apparently it has only a single class, which is not accepted by the classifier\n",
     "        # genbase -> apparently it has only a single class, which is not accepted by the classifier\n",
     "        # mediamill -> takes too long to train and test\n",
+    "        # medical -> apparently it has only a single class, which is not accepted by the classifier\n",
     "\n",
     "        for dataset_name, variant in _available_data_sets:\n",
     "            if dataset_name in skip:\n",
@@ -914,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -927,8 +928,10 @@
       "emotions:train - exists, not redownloading\n",
       "emotions:test - exists, not redownloading\n",
       "finished baseline for emotions\n",
-      "mediamill:train - exists, not redownloading\n",
-      "mediamill:test - exists, not redownloading\n"
+      "rcv1subset1:train - does not exists downloading\n",
+      "Downloaded rcv1subset1-train\n",
+      "rcv1subset1:test - does not exists downloading\n",
+      "Downloaded rcv1subset1-test\n"
      ]
     }
    ],
@@ -954,7 +957,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
