runs the pipeline for almost all datasets

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
     "        if _available_data_sets is None:\n",
     "            raise Exception(\"could not load available data sets\")\n",
     "\n",
-    "        skip = [\"bibtex\", \"Corel5k\", \"delicious\", \"enron\", \"genbase\", \"mediamill\", \"medical\"]\n",
+    "        skip = [\"bibtex\", \"Corel5k\", \"delicious\", \"enron\", \"genbase\", \"mediamill\", \"medical\", \"rcv1subset1\"]\n",
     "        # bibtex -> takes too long to train and test\n",
     "        # Corel5k -> apparently it has only a single class, which is not accepted by the classifier\n",
     "        # delicious -> takes too long to train and test\n",
@@ -886,6 +886,7 @@
     "        # genbase -> apparently it has only a single class, which is not accepted by the classifier\n",
     "        # mediamill -> takes too long to train and test\n",
     "        # medical -> apparently it has only a single class, which is not accepted by the classifier\n",
+    "        # rcv1subset1 -> takes too long to train and test\n",
     "\n",
     "        for dataset_name, variant in _available_data_sets:\n",
     "            if dataset_name in skip:\n",
@@ -915,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -928,10 +929,33 @@
       "emotions:train - exists, not redownloading\n",
       "emotions:test - exists, not redownloading\n",
       "finished baseline for emotions\n",
-      "rcv1subset1:train - does not exists downloading\n",
-      "Downloaded rcv1subset1-train\n",
-      "rcv1subset1:test - does not exists downloading\n",
-      "Downloaded rcv1subset1-test\n"
+      "rcv1subset2:train - does not exists downloading\n",
+      "Downloaded rcv1subset2-train\n",
+      "rcv1subset2:test - does not exists downloading\n",
+      "Downloaded rcv1subset2-test\n",
+      "finished baseline for rcv1subset2\n",
+      "rcv1subset3:train - does not exists downloading\n",
+      "Downloaded rcv1subset3-train\n",
+      "rcv1subset3:test - does not exists downloading\n",
+      "Downloaded rcv1subset3-test\n",
+      "finished baseline for rcv1subset3\n",
+      "rcv1subset4:train - does not exists downloading\n",
+      "Downloaded rcv1subset4-train\n",
+      "rcv1subset4:test - does not exists downloading\n",
+      "Downloaded rcv1subset4-test\n",
+      "finished baseline for rcv1subset4\n",
+      "rcv1subset5:train - does not exists downloading\n",
+      "Downloaded rcv1subset5-train\n",
+      "rcv1subset5:test - does not exists downloading\n",
+      "Downloaded rcv1subset5-test\n",
+      "finished baseline for rcv1subset5\n",
+      "scene:train - exists, not redownloading\n",
+      "scene:test - exists, not redownloading\n",
+      "finished baseline for scene\n",
+      "tmc2007_500:train - does not exists downloading\n",
+      "Downloaded tmc2007_500-train\n",
+      "tmc2007_500:test - does not exists downloading\n",
+      "Downloaded tmc2007_500-test\n"
      ]
     }
    ],
