adds conclusion for using other datasets

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -963,6 +963,24 @@
     "pipeline = BasicStackingAgainstBinaryRelevanceBaselineTest()\n",
     "pipeline.run()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "The pipeline compares metrics obtained for a regular `BinaryRelevance` model and my basic implementation for a stacking model.\n",
+    "\n",
+    "After running this comparison for almost all datasets, we can conclude that there's nearly no difference between using the regular `BinaryRelevance` and the stacking implementation.\n",
+    "\n",
+    "Some datasets, for some reason, take quite a while to train, and they end up resulting in 0.00 _accuracy_. However, for these datasets, the _hamming loss_ has a value `>0`, and there's a very tiny difference between the stacking and the regular binary relevance models. So we can say that the implementation seems to be doing at least _something_, even if completely minimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
