finishes running the models, for now

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -791,6 +791,8 @@
    "source": [
     "## 1.3. Comparing to other stacking implementations\n",
     "\n",
+    "**TODO: move this section to after the \"using other datasets\".**\n",
+    "\n",
     "Let's compare my implementation of the stacking classifier to the one from [utiml](https://github.com/rivolli/utiml).\n",
     "\n",
     "[Here is a guide](https://cran.r-project.org/web/packages/utiml/vignettes/utiml-overview.html) to get started with the `utiml` library.\n",
