reorganizes document a bit

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2. Setting up a stacking classifier\n",
+    "## 1.2. Setting up a basic stacking classifier\n",
     "\n",
     "At first, let's build a simple stacking implementation, so we can have a baseline to compare with the specialized stacking implementation."
    ]
@@ -789,31 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3. Comparing to other stacking implementations\n",
-    "\n",
-    "**TODO: move this section to after the \"using other datasets\".**\n",
-    "\n",
-    "Let's compare my implementation of the stacking classifier to the one from [utiml](https://github.com/rivolli/utiml).\n",
-    "\n",
-    "[Here is a guide](https://cran.r-project.org/web/packages/utiml/vignettes/utiml-overview.html) to get started with the `utiml` library.\n",
-    "\n",
-    "2023-08-17: I tried to read the source code, but I could not spot exactly how the stacking is being implemented. As a matter of fact, I don't even know if my understanding of the stacking is correct.\n",
-    "\n",
-    "For now, I will proceed with implementing the actual model, and then I will try to go back and debug all of this."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TODO**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.4. Using other datasets\n",
+    "## 1.3. Using other datasets\n",
     "\n",
     "I will try to list all available datasets, then try all of them using Binary Relevance as a baseline and my Basic Stacking approach. The objective is to see if the performance metrics change for any of the datasets."
    ]
@@ -976,7 +952,36 @@
     "\n",
     "After running this comparison for almost all datasets, we can conclude that there's nearly no difference between using the regular `BinaryRelevance` and the stacking implementation.\n",
     "\n",
-    "Some datasets, for some reason, take quite a while to train, and they end up resulting in 0.00 _accuracy_. However, for these datasets, the _hamming loss_ has a value `>0`, and there's a very tiny difference between the stacking and the regular binary relevance models. So we can say that the implementation seems to be doing at least _something_, even if completely minimal."
+    "These are the datasets that were tested:\n",
+    "\n",
+    "- birds\n",
+    "- emotions\n",
+    "- rcv1subset2\n",
+    "- rcv1subset3\n",
+    "- rcv1subset4\n",
+    "- rcv1subset5\n",
+    "- scene\n",
+    "\n",
+    "Other datasets were skipped for taking an abnormally long time to run. Also, some final datasets were not used as I considered I had enough results that were representative of the whole.\n",
+    "\n",
+    "Some datasets, for some reason, take quite some more time to train and they end up resulting in 0.00 _accuracy_. However, for these datasets, the _hamming loss_ has a value `>0`, and there's a very tiny difference between the stacking and the regular binary relevance models. **So we can say that the implementation seems to be doing at least _something_, even if completely minimal**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4. Comparing to other stacking implementations\n",
+    "\n",
+    "**TODO: move this section to after the \"using other datasets\".**\n",
+    "\n",
+    "Let's compare my implementation of the stacking classifier to the one from [utiml](https://github.com/rivolli/utiml).\n",
+    "\n",
+    "[Here is a guide](https://cran.r-project.org/web/packages/utiml/vignettes/utiml-overview.html) to get started with the `utiml` library.\n",
+    "\n",
+    "2023-08-17: I tried to read the source code, but I could not spot exactly how the stacking is being implemented. As a matter of fact, I don't even know if my understanding of the stacking is correct.\n",
+    "\n",
+    "For now, I will proceed with implementing the actual model, and then I will try to go back and debug all of this."
    ]
   },
   {
