--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,9 @@
     "from typing import List, Optional, Any, Tuple, Dict\n",
     "import numpy as np\n",
     "import sklearn.metrics as metrics\n",
-    "import json\n"
+    "import json\n",
+    "import pandas as pd\n",
+    "from sklearn.feature_selection import f_classif\n"
    ]
   },
   {
@@ -988,6 +990,286 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.5. Implementing the specialized model\n",
+    "\n",
+    "TODO: Insert the article reference here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ProblemTransformationBase' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-59487602d918>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mStackingWithFTests\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mProblemTransformationBase\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mfirst_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mBinaryRelevance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0msecond_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mBinaryRelevance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mAny\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequire_dense\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ProblemTransformationBase' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class StackingWithFTests(ProblemTransformationBase):\n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: BinaryRelevance\n",
+    "\n",
+    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "        super(BasicStacking, self).__init__(classifier, require_dense)\n",
+    "\n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "        self.second_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        # TODO: in theory, we have to run an f-test to every pair of labels\n",
+    "        # in this `first_layer_predictions`\n",
+    "\n",
+    "        X_expanded = np.hstack(\n",
+    "            [X.todense(), first_layer_predictions.todense()])\n",
+    "\n",
+    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "\n",
+    "    def predict(self, X: Any):\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack(\n",
+    "            [X.todense(), first_layer_predictions.todense()])\n",
+    "        return self.second_layer_classifiers.predict(X_expanded)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scene:train - exists, not redownloading\n",
+      "scene:test - exists, not redownloading\n",
+      "Accuracy score:  0.5869565217391305\n",
+      "Hamming loss:  0.08416945373467112\n"
+     ]
+    }
+   ],
+   "source": [
+    "# doing some short experiments below\n",
+    "\n",
+    "name = \"scene\"\n",
+    "\n",
+    "train_data = load_dataset(name, \"train\")\n",
+    "test_data = load_dataset(name, \"test\")\n",
+    "\n",
+    "X_train, y_train, _, _ = train_data\n",
+    "X_test, y_test, _, _ = test_data\n",
+    "\n",
+    "clf = BinaryRelevance(\n",
+    "    classifier=SVC(),\n",
+    "    require_dense=[False, True]\n",
+    ")\n",
+    "\n",
+    "clf.fit(X_train, y_train)\n",
+    "preds = clf.predict(X_test)\n",
+    "\n",
+    "print(\"Accuracy score: \", metrics.accuracy_score(y_test, preds))\n",
+    "print(\"Hamming loss: \", metrics.hamming_loss(y_test, preds))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1196, 6)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.todense().shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_count = preds.shape[1]\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for i in range(0, labels_count):\n",
+    "    for j in range(0, labels_count):\n",
+    "        if i == j:\n",
+    "            continue\n",
+    "\n",
+    "        X = preds.todense()[:, i]\n",
+    "        X = np.asarray(X).reshape(-1, 1)\n",
+    "        y = preds.todense()[:, j]\n",
+    "        y = np.asarray(y).reshape(-1)\n",
+    "\n",
+    "        f_test_result = float(f_classif(X, y)[0])\n",
+    "\n",
+    "        results.append({\n",
+    "            \"label_being_tested\": i,\n",
+    "            \"against_label\": j,\n",
+    "            \"f_test_result\": f_test_result\n",
+    "        })\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label_being_tested': 0,\n",
+       "  'against_label': 1,\n",
+       "  'f_test_result': 28.525597269624583},\n",
+       " {'label_being_tested': 0,\n",
+       "  'against_label': 2,\n",
+       "  'f_test_result': 30.483421750663112},\n",
+       " {'label_being_tested': 0,\n",
+       "  'against_label': 3,\n",
+       "  'f_test_result': 33.838056680161955},\n",
+       " {'label_being_tested': 0,\n",
+       "  'against_label': 4,\n",
+       "  'f_test_result': 17.263665283934625},\n",
+       " {'label_being_tested': 0,\n",
+       "  'against_label': 5,\n",
+       "  'f_test_result': 19.69910729184047},\n",
+       " {'label_being_tested': 1,\n",
+       "  'against_label': 0,\n",
+       "  'f_test_result': 28.52559726962455},\n",
+       " {'label_being_tested': 1,\n",
+       "  'against_label': 2,\n",
+       "  'f_test_result': 26.642728910601583},\n",
+       " {'label_being_tested': 1,\n",
+       "  'against_label': 3,\n",
+       "  'f_test_result': 32.59656218402426},\n",
+       " {'label_being_tested': 1,\n",
+       "  'against_label': 4,\n",
+       "  'f_test_result': 10.297689123645533},\n",
+       " {'label_being_tested': 1,\n",
+       "  'against_label': 5,\n",
+       "  'f_test_result': 18.98438159560994},\n",
+       " {'label_being_tested': 2,\n",
+       "  'against_label': 0,\n",
+       "  'f_test_result': 30.48342175066313},\n",
+       " {'label_being_tested': 2,\n",
+       "  'against_label': 1,\n",
+       "  'f_test_result': 26.642728910601594},\n",
+       " {'label_being_tested': 2,\n",
+       "  'against_label': 3,\n",
+       "  'f_test_result': 19.79370510346035},\n",
+       " {'label_being_tested': 2,\n",
+       "  'against_label': 4,\n",
+       "  'f_test_result': 22.93396034664349},\n",
+       " {'label_being_tested': 2,\n",
+       "  'against_label': 5,\n",
+       "  'f_test_result': 17.721247826490103},\n",
+       " {'label_being_tested': 3,\n",
+       "  'against_label': 0,\n",
+       "  'f_test_result': 33.83805668016194},\n",
+       " {'label_being_tested': 3,\n",
+       "  'against_label': 1,\n",
+       "  'f_test_result': 32.59656218402426},\n",
+       " {'label_being_tested': 3,\n",
+       "  'against_label': 2,\n",
+       "  'f_test_result': 19.79370510346035},\n",
+       " {'label_being_tested': 3,\n",
+       "  'against_label': 4,\n",
+       "  'f_test_result': 11.755093524743321},\n",
+       " {'label_being_tested': 3,\n",
+       "  'against_label': 5,\n",
+       "  'f_test_result': 22.487249858331744},\n",
+       " {'label_being_tested': 4,\n",
+       "  'against_label': 0,\n",
+       "  'f_test_result': 17.26366528393462},\n",
+       " {'label_being_tested': 4,\n",
+       "  'against_label': 1,\n",
+       "  'f_test_result': 10.297689123645531},\n",
+       " {'label_being_tested': 4,\n",
+       "  'against_label': 2,\n",
+       "  'f_test_result': 22.933960346643513},\n",
+       " {'label_being_tested': 4,\n",
+       "  'against_label': 3,\n",
+       "  'f_test_result': 11.755093524743314},\n",
+       " {'label_being_tested': 4,\n",
+       "  'against_label': 5,\n",
+       "  'f_test_result': 2.495364053299142},\n",
+       " {'label_being_tested': 5,\n",
+       "  'against_label': 0,\n",
+       "  'f_test_result': 19.699107291840463},\n",
+       " {'label_being_tested': 5,\n",
+       "  'against_label': 1,\n",
+       "  'f_test_result': 18.984381595609946},\n",
+       " {'label_being_tested': 5,\n",
+       "  'against_label': 2,\n",
+       "  'f_test_result': 17.721247826490107},\n",
+       " {'label_being_tested': 5,\n",
+       "  'against_label': 3,\n",
+       "  'f_test_result': 22.487249858331758},\n",
+       " {'label_being_tested': 5,\n",
+       "  'against_label': 4,\n",
+       "  'f_test_result': 2.495364053299164}]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
   }
  ],
  "metadata": {
