--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,61 +997,9 @@
    "source": [
     "## 1.5. Implementing the specialized model\n",
     "\n",
-    "TODO: Insert the article reference here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ProblemTransformationBase' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-59487602d918>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mStackingWithFTests\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mProblemTransformationBase\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mfirst_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mBinaryRelevance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0msecond_layer_classifiers\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mBinaryRelevance\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mAny\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrequire_dense\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mOptional\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbool\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ProblemTransformationBase' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "class StackingWithFTests(ProblemTransformationBase):\n",
-    "    first_layer_classifiers: BinaryRelevance\n",
-    "    second_layer_classifiers: BinaryRelevance\n",
+    "Model based on -> TODO: Insert the article reference here\n",
     "\n",
-    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
-    "        super(BasicStacking, self).__init__(classifier, require_dense)\n",
-    "\n",
-    "        self.first_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(),\n",
-    "            require_dense=[False, True]\n",
-    "        )\n",
-    "\n",
-    "        self.second_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(),\n",
-    "            require_dense=[False, True]\n",
-    "        )\n",
-    "\n",
-    "    def fit(self, X: Any, y: Any):\n",
-    "        self.first_layer_classifiers.fit(X, y)\n",
-    "\n",
-    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
-    "        # TODO: in theory, we have to run an f-test to every pair of labels\n",
-    "        # in this `first_layer_predictions`\n",
-    "\n",
-    "        X_expanded = np.hstack(\n",
-    "            [X.todense(), first_layer_predictions.todense()])\n",
-    "\n",
-    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
-    "\n",
-    "    def predict(self, X: Any):\n",
-    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
-    "        X_expanded = np.hstack(\n",
-    "            [X.todense(), first_layer_predictions.todense()])\n",
-    "        return self.second_layer_classifiers.predict(X_expanded)\n"
+    "Let's start with some basic experiments to understand how to code certain sections of the model."
    ]
   },
   {
@@ -1269,6 +1217,356 @@
    ],
    "source": [
     "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StackingWithFTests(ProblemTransformationBase):\n",
+    "    first_layer_classifiers: BinaryRelevance\n",
+    "    second_layer_classifiers: BinaryRelevance\n",
+    "\n",
+    "    def __init__(self, classifier: Any = None, require_dense: Optional[List[bool]] = None):\n",
+    "        super(StackingWithFTests, self).__init__(classifier, require_dense)\n",
+    "\n",
+    "        self.first_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "        # TODO: allow for any base model (base classifier) to be used\n",
+    "        # right now I am forcing the use of SVC\n",
+    "\n",
+    "        self.second_layer_classifiers = BinaryRelevance(\n",
+    "            classifier=SVC(),\n",
+    "            require_dense=[False, True]\n",
+    "        )\n",
+    "\n",
+    "    def fit(self, X: Any, y: Any):\n",
+    "        self.first_layer_classifiers.fit(X, y)\n",
+    "\n",
+    "        return self.calculate_f_test_for_all_label_pairs(X)\n",
+    "        # TODO: temporary\n",
+    "\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        # TODO: in theory, we have to run an f-test to every pair of labels\n",
+    "        # in this `first_layer_predictions`\n",
+    "\n",
+    "        X_expanded = np.hstack(\n",
+    "            [X.todense(), first_layer_predictions.todense()])\n",
+    "\n",
+    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "\n",
+    "    def predict(self, X: Any):\n",
+    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "        X_expanded = np.hstack(\n",
+    "            [X.todense(), first_layer_predictions.todense()])\n",
+    "        return self.second_layer_classifiers.predict(X_expanded)\n",
+    "    \n",
+    "    def calculate_f_test_for_all_label_pairs(self, X_train: Any) -> List[Dict[str, Any]]:\n",
+    "        predictions = self.first_layer_classifiers.predict(X_train)\n",
+    "        \n",
+    "        labels_count = predictions.shape[1]\n",
+    "        results = []\n",
+    "\n",
+    "        for i in range(0, labels_count):\n",
+    "            for j in range(0, labels_count):\n",
+    "                if i == j:\n",
+    "                    continue\n",
+    "\n",
+    "                X = predictions.todense()[:, i]\n",
+    "                X = self.convert_matrix_to_array(X)\n",
+    "\n",
+    "                y = predictions.todense()[:, j]\n",
+    "                y = self.convert_matrix_to_vector(y)\n",
+    "\n",
+    "                f_test_result = float(f_classif(X, y)[0])\n",
+    "\n",
+    "                results.append({\n",
+    "                    \"label_being_tested\": i,\n",
+    "                    \"against_label\": j,\n",
+    "                    \"f_test_result\": f_test_result\n",
+    "                })\n",
+    "        \n",
+    "        return results\n",
+    "    \n",
+    "    def convert_matrix_to_array(self, matrix: Any):\n",
+    "        return np.asarray(matrix).reshape(-1, 1)\n",
+    "\n",
+    "    def convert_matrix_to_vector(self, matrix: Any):\n",
+    "        return np.asarray(matrix).reshape(-1)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = StackingWithFTests()\n",
+    "r = clf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label_being_tested</th>\n",
+       "      <th>against_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.515984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39.806188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.318770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21.364763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>26.239009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.515984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26.196176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.108564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26.354708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27.226675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39.806188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.196176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22.825809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34.501307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32.305826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.318770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30.108564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22.825809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14.226475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30.795821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.364763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.354708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34.501307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14.226475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15.431489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.239009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.226675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32.305826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.795821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.431489</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    label_being_tested  against_label  f_test_result\n",
+       "0                    0              1      33.515984\n",
+       "1                    0              2      39.806188\n",
+       "2                    0              3      32.318770\n",
+       "3                    0              4      21.364763\n",
+       "4                    0              5      26.239009\n",
+       "5                    1              0      33.515984\n",
+       "6                    1              2      26.196176\n",
+       "7                    1              3      30.108564\n",
+       "8                    1              4      26.354708\n",
+       "9                    1              5      27.226675\n",
+       "10                   2              0      39.806188\n",
+       "11                   2              1      26.196176\n",
+       "12                   2              3      22.825809\n",
+       "13                   2              4      34.501307\n",
+       "14                   2              5      32.305826\n",
+       "15                   3              0      32.318770\n",
+       "16                   3              1      30.108564\n",
+       "17                   3              2      22.825809\n",
+       "18                   3              4      14.226475\n",
+       "19                   3              5      30.795821\n",
+       "20                   4              0      21.364763\n",
+       "21                   4              1      26.354708\n",
+       "22                   4              2      34.501307\n",
+       "23                   4              3      14.226475\n",
+       "24                   4              5      15.431489\n",
+       "25                   5              0      26.239009\n",
+       "26                   5              1      27.226675\n",
+       "27                   5              2      32.305826\n",
+       "28                   5              3      30.795821\n",
+       "29                   5              4      15.431489"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(r)"
    ]
   }
  ],
