draft: big f calculation

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1297,6 +1297,7 @@
     "\n",
     "    def convert_matrix_to_vector(self, matrix: Any):\n",
     "        return np.asarray(matrix).reshape(-1)\n",
+    "    \n",
     "    \n"
    ]
   },
@@ -1312,7 +1313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_r = pd.DataFrame(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1560,14 +1570,340 @@
        "29                   5              4      15.431489"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(r)"
+    "df_r"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label_being_tested</th>\n",
+       "      <th>against_label</th>\n",
+       "      <th>f_test_result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39.806188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.515984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.318770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>26.239009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21.364763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.515984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.108564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27.226675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26.354708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26.196176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39.806188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34.501307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>32.305826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.196176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22.825809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.318770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30.795821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30.108564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22.825809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14.226475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34.501307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.354708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21.364763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15.431489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14.226475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32.305826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30.795821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.226675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.239009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15.431489</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    label_being_tested  against_label  f_test_result\n",
+       "1                    0              2      39.806188\n",
+       "0                    0              1      33.515984\n",
+       "2                    0              3      32.318770\n",
+       "4                    0              5      26.239009\n",
+       "3                    0              4      21.364763\n",
+       "5                    1              0      33.515984\n",
+       "7                    1              3      30.108564\n",
+       "9                    1              5      27.226675\n",
+       "8                    1              4      26.354708\n",
+       "6                    1              2      26.196176\n",
+       "10                   2              0      39.806188\n",
+       "13                   2              4      34.501307\n",
+       "14                   2              5      32.305826\n",
+       "11                   2              1      26.196176\n",
+       "12                   2              3      22.825809\n",
+       "15                   3              0      32.318770\n",
+       "19                   3              5      30.795821\n",
+       "16                   3              1      30.108564\n",
+       "17                   3              2      22.825809\n",
+       "18                   3              4      14.226475\n",
+       "22                   4              2      34.501307\n",
+       "21                   4              1      26.354708\n",
+       "20                   4              0      21.364763\n",
+       "24                   4              5      15.431489\n",
+       "23                   4              3      14.226475\n",
+       "27                   5              2      32.305826\n",
+       "28                   5              3      30.795821\n",
+       "26                   5              1      27.226675\n",
+       "25                   5              0      26.239009\n",
+       "29                   5              4      15.431489"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_r.sort_values(by=[\"label_being_tested\", \"f_test_result\"], ascending=[True,False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'for_label': 0, 'feature': 2.0, 'f_test_result': 39.80618814109212},\n",
+       " {'for_label': 0, 'feature': 1.0, 'f_test_result': 33.51598442845346},\n",
+       " {'for_label': 1, 'feature': 0.0, 'f_test_result': 33.515984428453464},\n",
+       " {'for_label': 1, 'feature': 3.0, 'f_test_result': 30.108563656676544},\n",
+       " {'for_label': 2, 'feature': 0.0, 'f_test_result': 39.806188141092115},\n",
+       " {'for_label': 2, 'feature': 4.0, 'f_test_result': 34.50130737984659},\n",
+       " {'for_label': 3, 'feature': 0.0, 'f_test_result': 32.318769980014174},\n",
+       " {'for_label': 3, 'feature': 5.0, 'f_test_result': 30.79582075394769},\n",
+       " {'for_label': 4, 'feature': 2.0, 'f_test_result': 34.50130737984662},\n",
+       " {'for_label': 4, 'feature': 1.0, 'f_test_result': 26.354708033488933},\n",
+       " {'for_label': 5, 'feature': 2.0, 'f_test_result': 32.30582550873288},\n",
+       " {'for_label': 5, 'feature': 3.0, 'f_test_result': 30.795820753947698}]"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "sorted_df_r = df_r.sort_values(by=[\"label_being_tested\", \"f_test_result\"],\n",
+    "                 ascending=[True, False])\n",
+    "# this will make it easier to select the features afterwards\n",
+    "\n",
+    "alpha = 0.6\n",
+    "selected_features = []\n",
+    "\n",
+    "for i in range(0, 6):\n",
+    "    mask = sorted_df_r[\"label_being_tested\"] == i\n",
+    "    split_df = sorted_df_r[mask].reset_index(drop=True)\n",
+    "\n",
+    "    big_f = split_df[\"f_test_result\"].sum()\n",
+    "    max_cum_f = alpha * big_f\n",
+    "\n",
+    "    cum_f = 0\n",
+    "    for _, row in split_df.iterrows():\n",
+    "        cum_f += row[\"f_test_result\"]\n",
+    "        if cum_f > max_cum_f:\n",
+    "            break\n",
+    "\n",
+    "        selected_features.append({\n",
+    "            \"for_label\": i,\n",
+    "            \"feature\": row[\"against_label\"],\n",
+    "            \"f_test_result\": row[\"f_test_result\"],\n",
+    "        })\n",
+    "\n",
+    "selected_features\n",
+    "\n",
+    "# TODO: continue from here by adapting this to a method in the class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
