finishes setting up training phase

--- a/1_first_model_experiments.ipynb
+++ b/1_first_model_experiments.ipynb
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,37 +1240,59 @@
     "        # TODO: allow for any base model (base classifier) to be used\n",
     "        # right now I am forcing the use of SVC\n",
     "\n",
-    "        self.second_layer_classifiers = BinaryRelevance(\n",
-    "            classifier=SVC(),\n",
-    "            require_dense=[False, True]\n",
-    "        )\n",
+    "        self.second_layer_classifiers = []\n",
+    "        # TODO: add typing to this\n",
     "\n",
     "    def fit(self, X: Any, y: Any):\n",
     "        self.first_layer_classifiers.fit(X, y)\n",
     "\n",
-    "        r = self.calculate_f_test_for_all_label_pairs(X)\n",
-    "    \n",
-    "        return self.get_map_of_correlated_labels(r, 0.6)\n",
-    "        # TODO: temporary\n",
+    "        predictions = self.first_layer_classifiers.predict(X)\n",
+    "        # TODO: does it really make sense to take predictions over the same set of data used for training?\n",
+    "        \n",
+    "        alpha = 0.6\n",
     "\n",
-    "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
-    "        # TODO: in theory, we have to run an f-test to every pair of labels\n",
-    "        # in this `first_layer_predictions`\n",
+    "        r = self.calculate_f_test_for_all_label_pairs(predictions)\n",
+    "        m = self.get_map_of_correlated_labels(r, alpha)\n",
+    "        self.m = m\n",
     "\n",
-    "        X_expanded = np.hstack(\n",
-    "            [X.todense(), first_layer_predictions.todense()])\n",
+    "        df_temp = pd.DataFrame(m)\n",
+    "        labels_count = predictions.shape[1]\n",
     "\n",
-    "        self.second_layer_classifiers.fit(X_expanded, y)\n",
+    "        for i in range(labels_count):\n",
+    "            mask = df_m[\"for_label\"] == i\n",
+    "            split_df = df_m[mask].reset_index(drop=True)\n",
+    "            labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "\n",
+    "            additional_input = predictions.todense()[:, labels_to_expand]\n",
+    "            \n",
+    "            X_expanded = np.hstack([X.todense(), additional_input])\n",
+    "            X_expanded = np.asarray(X_expanded)\n",
+    "\n",
+    "            y_label_specific = y.todense()[:, i]\n",
+    "            y_label_specific = self.convert_matrix_to_vector(y_label_specific)\n",
+    "\n",
+    "            meta_classifier = SVC()\n",
+    "            meta_classifier.fit(X_expanded, y_label_specific)\n",
+    "\n",
+    "            self.second_layer_classifiers.append(meta_classifier)\n",
+    "            print(f\"finished training meta classifier for label {i}\")\n",
     "\n",
     "    def predict(self, X: Any):\n",
+    "        # TODO: any way to check if model was already trained?\n",
+    "\n",
     "        first_layer_predictions = self.first_layer_classifiers.predict(X)\n",
+    "\n",
+    "        df_temp = pd.DataFrame(m)\n",
+    "        labels_count = predictions.shape[1]\n",
+    "\n",
+    "        for i in range(labels_count):\n",
+    "            pass\n",
+    "\n",
     "        X_expanded = np.hstack(\n",
     "            [X.todense(), first_layer_predictions.todense()])\n",
     "        return self.second_layer_classifiers.predict(X_expanded)\n",
     "    \n",
-    "    def calculate_f_test_for_all_label_pairs(self, X_train: Any) -> List[Dict[str, Any]]:\n",
-    "        predictions = self.first_layer_classifiers.predict(X_train)\n",
-    "        \n",
+    "    def calculate_f_test_for_all_label_pairs(self, predictions: Any) -> List[Dict[str, Any]]:\n",
     "        labels_count = predictions.shape[1]\n",
     "        results = []\n",
     "\n",
@@ -1327,53 +1349,240 @@
     "\n",
     "                selected_features.append({\n",
     "                    \"for_label\": i,\n",
-    "                    \"feature\": row[\"against_label\"],\n",
-    "                    \"f_test_result\": row[\"f_test_result\"],\n",
+    "                    \"expand_this_label\": int(row[\"against_label\"]),\n",
+    "                    \"f_test_result\": float(row[\"f_test_result\"]),\n",
     "                })\n",
     "        \n",
-    "        return selected_features\n",
-    "\n",
-    "    \n"
+    "        return selected_features\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished training meta classifier for label 0\n",
+      "finished training meta classifier for label 1\n",
+      "finished training meta classifier for label 2\n",
+      "finished training meta classifier for label 3\n",
+      "finished training meta classifier for label 4\n",
+      "finished training meta classifier for label 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = StackingWithFTests()\n",
+    "m = clf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [1 0]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 0]]\n",
+      "[[0 0]\n",
+      " [1 0]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [1 0]]\n",
+      "[[0 0]\n",
+      " [1 0]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 1]\n",
+      " [0 0]\n",
+      " [1 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[[0 0]\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_m = pd.DataFrame(m)\n",
+    "labels_count = 6\n",
+    "\n",
+    "for i in range(labels_count):\n",
+    "    mask = df_m[\"for_label\"] == i\n",
+    "    split_df = df_m[mask].reset_index(drop=True)\n",
+    "    labels_to_expand = split_df[\"expand_this_label\"].to_list()\n",
+    "\n",
+    "    print(preds.todense()[:, labels_to_expand])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'for_label': 0, 'feature': 2.0, 'f_test_result': 39.80618814109212},\n",
-       " {'for_label': 0, 'feature': 1.0, 'f_test_result': 33.51598442845346},\n",
-       " {'for_label': 1, 'feature': 0.0, 'f_test_result': 33.515984428453464},\n",
-       " {'for_label': 1, 'feature': 3.0, 'f_test_result': 30.108563656676544},\n",
-       " {'for_label': 2, 'feature': 0.0, 'f_test_result': 39.806188141092115},\n",
-       " {'for_label': 2, 'feature': 4.0, 'f_test_result': 34.50130737984659},\n",
-       " {'for_label': 3, 'feature': 0.0, 'f_test_result': 32.318769980014174},\n",
-       " {'for_label': 3, 'feature': 5.0, 'f_test_result': 30.79582075394769},\n",
-       " {'for_label': 4, 'feature': 2.0, 'f_test_result': 34.50130737984662},\n",
-       " {'for_label': 4, 'feature': 1.0, 'f_test_result': 26.354708033488933},\n",
-       " {'for_label': 5, 'feature': 2.0, 'f_test_result': 32.30582550873288},\n",
-       " {'for_label': 5, 'feature': 3.0, 'f_test_result': 30.795820753947698}]"
+       "6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf = StackingWithFTests()\n",
-    "clf.fit(X_train, y_train)\n"
+    "df_m[\"for_label\"].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [1, 0],\n",
+       "        [1, 0],\n",
+       "        [1, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.todense()[:30,[0,1]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[1, 0, 0, 0, 1, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 1, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 1, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 1, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.todense()[0:25,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        ...,\n",
+       "        [0, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.todense()[:, [1,2]]"
+   ]
   }
  ],
  "metadata": {
